detail component center align issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,10 @@
   margin-bottom: 10px;
   box-shadow: 0px 5px 5px #eee;
 }
+
+.DetailContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
