--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -4,5 +4,4 @@
   height: 40px;
   text-align: center;
   padding-top: 15px;
-  margin-left: 10px;
 }
